# C-FinalProject

./: CMakeCache.txt  CMakeLists.txt  Collectible.cpp  Collectible.h  Collectible_Manager.cpp  Collectible_Manager.h  Enemy.cpp  Enemy.h  Enemy_Manager.cpp  Enemy_Manager.h  Game_Generator.cpp  Game_Generator.h  Game_Player.cpp  Game_Player.h  Makefile  Obstacle.cpp  Obstacle.h  Obstacle_Manager.cpp  Obstacle_Manager.h  Player.cpp  Player.h  README.md  Room_Generator.cpp  Room_Generator.h  Window_Generator.cpp  Window_Generator.h  Window_Generator_constants.h  cmake_install.cmake  constants.h  main  main.cpp  ncurses_test  ncurses_test.cpp
